Load jQuery from Google CDN instead of b0rg

--- a/dl.html
+++ b/dl.html
@@ -115,7 +115,7 @@
 	<link href='http://fonts.googleapis.com/css?family=Pontano+Sans' rel='stylesheet' type='text/css' />
 	<link href='http://fonts.googleapis.com/css?family=Happy+Monkey' rel='stylesheet' type='text/css' />
 	<link href='http://fonts.googleapis.com/css?family=Squada+One' rel='stylesheet' type='text/css' />
-	<script type="text/javascript" src="http://b0rg.tdlive.org/jquery.js"></script>
+	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
 	<script type="text/javascript">
 	function n(){
 		console.log("You're using the console? That's great!");
